Run swift test without --enable-test-discovery

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,4 +81,4 @@ jobs:
             ${{ runner.os }}-spm-swift-${{ matrix.swift }}-
       - name: Build and Test
         run: |
-          swift test --enable-test-discovery
+          swift test
